--- a/thesis-ch04-ibid.tex
+++ b/thesis-ch04-ibid.tex
@@ -1,4 +1,4 @@
-\chapter{Efficient Incremental Search}
+\chapter{Bidirectional Incremental Search}
 \label{chap:ibid}
 
 In Chapter~\ref{chap:lazysp},
