--- a/figs/multistep-prescribed/herbbinnom-g1ll.tex
+++ b/figs/multistep-prescribed/herbbinnom-g1ll.tex
@@ -10,8 +10,21 @@
    ylabel=$x$ (rad),
    xlabel near ticks,
    ylabel near ticks,
-   xmin=0,
+   xmin=0,xmax=5,
+   ymin=15,ymax=38,
+   axis on top,
    ]
+
+   %\draw[black!14.5,fill=black!4.5] (axis cs:0,15) -- (axis cs:0,55) -- (axis cs:40,15) -- cycle;
+   %\draw[black!14.0,fill=black!4.0] (axis cs:0,15) -- (axis cs:0,51) -- (axis cs:36,15) -- cycle;
+   %\draw[black!13.5,fill=black!3.5] (axis cs:0,15) -- (axis cs:0,47) -- (axis cs:32,15) -- cycle;
+   \draw[black!13.0,fill=black!3.0] (axis cs:0,15) -- (axis cs:0,43) -- (axis cs:28,15) -- cycle;
+   \draw[black!12.5,fill=black!2.5] (axis cs:0,15) -- (axis cs:0,39) -- (axis cs:24,15) -- cycle;
+   \draw[black!12.0,fill=black!2.0] (axis cs:0,15) -- (axis cs:0,35) -- (axis cs:20,15) -- cycle;
+   \draw[black!11.5,fill=black!1.5] (axis cs:0,15) -- (axis cs:0,31) -- (axis cs:16,15) -- cycle;
+   \draw[black!11.0,fill=black!1.0] (axis cs:0,15) -- (axis cs:0,27) -- (axis cs:12,15) -- cycle;
+   \draw[black!10.5,fill=black!0.5] (axis cs:0,15) -- (axis cs:0,23) -- (axis cs: 8,15) -- cycle;
+   \draw[black!10.0,fill=black!0.0] (axis cs:0,15) -- (axis cs:0,19) -- (axis cs: 4,15) -- cycle;
    
    % rrt results
    \addplot
