--- a/thesis.tex
+++ b/thesis.tex
@@ -180,11 +180,12 @@ Lydia Kavraki, Rice University\\
 \include{thesis-ch05-lemur}
 \include{thesis-ch06-family}
 %%\include{thesis-ch06-family-extra}
-%\include{thesis-ch07-discussion}
+\include{thesis-ch07-discussion}
 
 \appendix
 \include{thesis-ch03-lazysp-proofs}
 \include{thesis-ch04-ibid-proofs}
+\include{thesis-ch05-lemur-appendix}
 \include{thesis-ch06-family-appendix}
 
 \bibliographystyle{abbrv}
